# datacoe

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci-linux.yml  ci-macos.yml  ci-windows.yml  ci.yml
cmake/: datacoeconfig.cmake
include/: CMakeLists.txt  data_manager.hpp  data_reader_writer.hpp  game_data.hpp
include/datacoe/: data_manager.hpp  data_reader_writer.hpp  game_data.hpp
src/: CMakeLists.txt  data_manager.cpp  data_reader_writer.cpp  game_data.cpp
tests/: CMakeLists.txt  data_manager_tests.cpp  data_reader_writer_tests.cpp  error_handling_tests.cpp  game_data_tests.cpp  integration_tests.cpp  memory_tests.cpp  performance_tests.cpp  tester.cpp  thread_safety_tests.cpp
